--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "configs",
   "version": "1.0.0",
   "description": "",
-  "main": "MongoDB.js",
+  "main": "MainServer.js",
   "scripts": {
-    "start": "node app"
+    "start": "nodemon MainServer.js"
   },
   "keywords": [],
   "author": "",
