--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,6 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "package.json",
-        "use": "@vercel/static-build",
-        "config": {
-          "distDir": "build"
-        }
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/index.html"
-      }
-    ]
-  }
-  
+  "version": 2,
+  "builds": [{ "src": "./MainServer.js", "use": "@vercel/node "}],
+  "routes": [{ "src": "/(.*)", "dest": "/"}]
+
+}
